--- a/index.html
+++ b/index.html
@@ -163,8 +163,7 @@
                             <!-- попап добавления тегов -->
                             <div class="pop_up" id="call_add_tag">
                                 <div class="title">
-                                    <div class="box">Выбор тегов</div>
-							    <img src="images/icon-close-02.svg" alt=""/> </div>
+                                    <div class="box">Выбор тегов</div> <img src="images/icon-close-02.svg" alt="" /> </div>
                                 <div class="box">
                                     <label class="container">Отзывы
                                         <input type="checkbox" checked="checked"> <span class="checkmark"></span> </label>
